--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -6,11 +6,13 @@ img{
 .navbar{
     display: flex;
     justify-content: space-around;
+    
     box-shadow: 1px 5px 5px #e0dcdc;
 }
 
 ul{
     display: flex;
+    align-items: baseline;
     
 }
 
@@ -25,3 +27,20 @@ a{
     font-size: 18px;
 }
 
+.primaryBtn{
+    cursor: pointer;
+    font-weight: bolder;
+    padding: 13px 25px;
+    font-size: 0.8rem;
+    border: none;
+    color: white;
+    background: #db183c;
+    border-radius: 15px;
+    margin-left: 20px;
+    transition: all 0.25s ease;
+}
+
+.primaryBtn:hover{
+    transform: translateY(-5px);
+    box-shadow: 0 10px 20px -10px rgba(219, 24, 44, 0.6);
+}
