--- a/frontend/src/components/Home.css
+++ b/frontend/src/components/Home.css
@@ -53,3 +53,16 @@
     cursor: pointer;
     color: #339ce3;
 }
+
+
+.material-symbols-outlined-red {
+    color: red;
+  font-variation-settings:
+  'FILL' 1,
+  'wght' 700,
+  'GRAD' 0,
+  'opsz' 48
+}
+.material-symbols-outlined{
+    cursor: pointer;
+}
