--- a/frontend/src/components/Profile.css
+++ b/frontend/src/components/Profile.css
@@ -1,38 +1,55 @@
-.profile{
-    max-width: 600px;
-    margin: 10px auto;
+.profile {
+  max-width: 600px;
+  margin: 10px auto;
 }
 
-.profile-frame{
-    
-    display: flex;
-    justify-content: space-evenly;
+.profile-frame {
+  display: flex;
+  justify-content: space-evenly;
 }
 
-.profile-pic{
-    height: fit-content;
+.profile-pic {
+  height: fit-content;
 }
-.profile-pic>img{
-    width: 160px;
-    height: 160px;
-    object-fit: contain;
-    border-radius: 100px;
-}
-
-.profile-data{
-    text-align: left;
-}
-.profile-info p{
-    padding: 0px 5px;
+.profile-pic > img {
+  width: 160px;
+  height: 160px;
+  object-fit: contain;
+  border-radius: 100px;
 }
 
-.gallery{
-    display: flex;
-    flex-wrap: wrap;
-    text-align: center;
+.profile-data {
+  text-align: left;
+}
+.profile-info p {
+  padding: 0px 5px;
 }
 
-.gallery img{
-    width: 30%;
-    margin: 10px;
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
+}
+
+.gallery img {
+  width: 30%;
+  margin: 10px;
+}
+
+.followBtn {
+  cursor: pointer;
+  font-weight: bolder;
+  padding: 13px 25px;
+  border-radius: 15px;
+  font-size: 0.8rem;
+  border: none;
+  color: white;
+  background: #0115eb;
+  transition: all 0.25s ease;
+  margin-left: 20px;
+}
+
+.followBtn:hover {
+  transform: scale(1.1);
+  box-shadow: 0 10px 20px -10px #0115eb;
 }
